--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl module Directory::Diff
 
+0.06 2017-10-14
+
+- Improved documentation for Directory::Diff::Copy
+
 0.05 2016-08-23
 
 - Copy permissions when files are copied
