--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl module Directory::Diff
 
+0.08 
+
+- Removed unused testing routines "default_dir_only" and "default_diff"
+
 0.07 2017-10-25
 
 - Restore accidentally removed dependence on mkpath in File::Copy
